Added links to GitHub, and developer's people page.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,8 +16,8 @@
                     <br><br>
                     <a href="/api/skipCurrentSong"><button class="btn btn-info">Skip Current Song</button></a>
                 </form>
-            <br>
-            <p>&copy;2017 - <a href="mailto:mxc9798@rit.edu">Mike Canning @ RIT CS</a></p>
+            <p><a href="https://github.com/mcanningjr/Shower-Llama">Contribute on GitHub</a></p>
+            <p>&copy;2017 - <a href="https://people.rit.edu/mxc9798">Mike Canning @ RIT CS</a></p>
         </center>
     </body>
 </html>
